--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <ul>
       <li>Class 10-CBSE</li>
       <ul>
-        <li><a href="G:\web dev\HTML -Personal Site\X Marksheet.pdf">Got CGPA-10</a></li>
+        <li><a href="X Marksheet">Got CGPA-10</a></li>
         <li>Won Inter VKV Essay writing</li>
       </ul>
       <li>Class 12-AHSEC</li>
@@ -47,7 +47,7 @@
       </ul>
       <li>BTech (CSE)-NITJ</li>
       <ul>
-        <li><a href="G:\web dev\HTML -Personal Site\btech_results(4thSem).pdf">CGPA(4th Sem)-9.18</a></li>
+        <li><a href="btech_results(4thSem).pdf">CGPA(4th Sem)-9.18</a></li>
       </ul>
     </ul>
   </p>
