--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <ul>
       <li>Class 10-CBSE</li>
       <ul>
-        <li><a href="X Marksheet">Got CGPA-10</a></li>
+        <li><a href="10Marksheet.pdf">Got CGPA-10</a></li>
         <li>Won Inter VKV Essay writing</li>
       </ul>
       <li>Class 12-AHSEC</li>
